--- a/css/bootstrap-desktop-native-flat.css
+++ b/css/bootstrap-desktop-native-flat.css
@@ -2012,8 +2012,8 @@ select[multiple].input-lg {
 }
 .btn:hover,
 .btn:focus {
-  color: #333333;
-  text-decoration: none;
+  /*color: #333333;*/
+  /*text-decoration: none;*/
 }
 .btn:active,
 .btn.active {
@@ -2042,9 +2042,9 @@ fieldset[disabled] .btn {
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-  color: #333333;
-  background-color: #ebebeb;
-  border-color: #adadad;
+  /*color: #333333;*/
+  /*background-color: #ebebeb;*/
+  /*border-color: #adadad;*/
 }
 .btn-default:active,
 .btn-default.active,
