--- a/css/bootstrap-desktop-behaviour.css
+++ b/css/bootstrap-desktop-behaviour.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #E6E6E6;
+  background-color: #ECECEC;
 }
 
 /**
@@ -134,4 +134,13 @@ textarea.form-control:focus {
   background: white;
   cursor: inherit;
   display: block;
+}
+
+
+.panel-title {
+  font-weight: 500;
+}
+
+.panel-heading {
+  padding: 5px 10px;
 }
